corrected overflow and added margin botton in image in about page

--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -2,8 +2,12 @@
     margin: 0;
     padding: 0;
 }
-.one{
+.center{
     text-align: center;
+}
+
+img{
+    margin-bottom: 24px;
 }
 
 .imgsize{
