--- a/public/stylesheets/findalawyer.css
+++ b/public/stylesheets/findalawyer.css
@@ -30,7 +30,9 @@ h5 {
 
 #heading > h1 {
     font-size: 45px;
-    margin-left: 65px;
+    margin-left: -60px;
+    margin-top: 110px;
+    padding: 8px;
 }
 
 #heading > p {
@@ -94,7 +96,6 @@ ul li .slide .content {
     background: rgba(255,255,255,0.9);
     padding: 40px;
     opacity: 0.7;
-    margin-top: -80px;
     margin-left: -120px;
 }
 
